--- a/package.json
+++ b/package.json
@@ -26,8 +26,12 @@
     "@vueuse/core": "^10.11.0",
     "@vueuse/integrations": "^10.11.0",
     "axios": "^1.7.2",
+    "d3": "^7.9.0",
     "element-plus": "^2.7.5",
+    "gsap": "^3.12.7",
     "pinia": "^2.1.7",
+    "shadcn": "2.4.0-canary.17",
+    "shadcn-vue": "^1.0.3",
     "universal-cookie": "^4.0.4",
     "vue": "^3.4.29",
     "vue-i18n": "^9.13.1",
@@ -50,6 +54,7 @@
     "@vitejs/plugin-vue": "^5.0.5",
     "@vue/test-utils": "^2.4.6",
     "autoprefixer": "^10.4.19",
+    "axios-mock-adapter": "^2.1.0",
     "bumpp": "^9.4.1",
     "commitizen": "^4.3.0",
     "commitlint-config-cz": "^0.13.3",
@@ -82,6 +87,7 @@
     "stylelint-order": "^6.0.4",
     "stylelint-prettier": "^5.0.0",
     "tailwindcss": "^3.4.4",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.4.5",
     "unocss": "^0.61.0",
     "unplugin-auto-import": "^0.17.6",
