--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,5 @@
 # 开发环境配置
 VITE_API_BASE_URL=/api
-VITE_ENABLE_MOCK=true
+VITE_ENABLE_MOCK=false
 VITE_FONT_CDN_URL=https://mybox-1257251314.cos.ap-chengdu.myqcloud.com/www/index/cdn/font/%E6%80%9D%E6%BA%90%E9%BB%91%E4%BD%93/result.css
+VITE_DIFY_HOST=http://132.232.203.3/
