--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "@faker-js/faker": "^9.7.0",
     "@unocss/reset": "^0.53.6",
     "@vueuse/core": "^10.11.0",
     "@vueuse/integrations": "^10.11.0",
@@ -61,12 +62,12 @@
     "cross-env": "^7.0.3",
     "cz-conventional-changelog": "^3.3.0",
     "cz-customizable": "^7.0.0",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-simple-import-sort": "^12.0.0",
-    "eslint-plugin-vue": "^9.21.1",
+    "eslint-plugin-simple-import-sort": "^12.1.0",
+    "eslint-plugin-vue": "^9.26.0",
     "husky": "^9.0.11",
     "jsdom": "^24.1.0",
     "lint-staged": "^15.2.7",
@@ -78,7 +79,7 @@
     "rollup": "^4.18.0",
     "sass": "^1.77.6",
     "standard-version": "^9.5.0",
-    "stylelint": "^16.4.0",
+    "stylelint": "^16.6.1",
     "stylelint-config-property-sort-order-smacss": "^10.0.0",
     "stylelint-config-recommended-scss": "^14.0.0",
     "stylelint-config-recommended-vue": "^1.5.0",
@@ -98,7 +99,7 @@
     "vite-plugin-vue-devtools": "^7.3.2",
     "vitest": "^0.34.6",
     "vue-eslint-parser": "^9.4.3",
-    "vue-tsc": "^2.0.14"
+    "vue-tsc": "^2.0.21"
   },
   "config": {
     "commitizen": {
